# OpenRisk

./: .dockerignore  .gitignore  AGENTS.md  BUGFIXES.md  Dockerfile  ESBUILD_CRASH_ANALYSIS.md  FEATURES_COMPLETE.md  FIXES_APPLIED.md  IMPLEMENTATION.md  PROMPT.md  README.md  TESTING_GUIDE.md  Taskfile.yml  architecture.md  compose.yaml  deno.json  diagnostic.sh  flake.nix  index.html  package-lock.json  package.json  plugin.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
.github/workflows/: backend-rust-checks.yml
.husky/: pre-commit
docs/: C4-generic-architecture.drawio  C4.md  DataModel.md  Dictionary.md  Entity.drawio  Entity.md  OpenRisk.archimate
plugins/example/: index.ts  plugin.json
plugins/test_plugin/backend/: Cargo.toml  build.rs
plugins/test_plugin/backend/src/: lib.rs
plugins/test_plugin/backend/src/adversea/: mod.rs
plugins/test_plugin/frontend/: index.ts  vite.config.ts
scripts/: db_inspect.py  generate-routes.mjs  precommit-backend.mjs  udeps-backend.mjs
src/: App.tsx  index.css  routeTree.gen.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  entitlements.plist  rustfmt.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/.sqlx/: schema.db
src-tauri/bindings/: Address.ts  BackendError.ts  BackendResult.ts  EnumValue.ts  FSPMError.ts  Name.ts  NewType.ts  Node.ts  Plugin.ts  Project.ts  ProjectPluginSettings.ts  ProjectSettings.ts  ReactTypeHint.ts  Table.ts  Type.ts  TypeValue.ts
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_init.sql  0002_add_scan_created_at.sql  0003_drop_schema_version.sql
src-tauri/plugins/: openrisk-types.ts
src-tauri/plugins/adversea/: index.ts  plugin.json  test.ts
src-tauri/plugins/adversea/wasm/: Cargo.toml
src-tauri/plugins/adversea/wasm/src/: lib.rs
src-tauri/plugins/adversea/wasm/src/adversea/: endpoints.rs  models.rs  utils.rs
src-tauri/plugins/invalid/: index.ts  plugin.json
src-tauri/plugins/opencorporates/: index.ts  plugin.json
src-tauri/plugins/opensanctions/: index.ts  plugin.json
src-tauri/plugins/persondemo/: index.ts  plugin.json
src-tauri/schemas/: plugin-manifest.schema.json  plugin-manifest.schema.rs
src-tauri/src/: core.rs  lib.rs  main.rs  plugin_manifest.rs  plugins.rs  transport.rs
src-tauri/src/adversea/: endpoints.rs  models.rs
src-tauri/src/app/: errors.rs  plugin.rs  project.rs  types.rs
src-tauri/src/app/plugin/: mod.rs  runtime.rs  types.rs
src-tauri/src/app/project/: dao.rs  db.rs  mod.rs  plugins.rs  security.rs  service.rs  session.rs  types.rs
src-tauri/src/app/project/dao/: helpers.rs  mod.rs  scans_dao.rs  settings_dao.rs
src-tauri/src/app/project/dao/sqlite/: helpers.rs  mod.rs  scans_dao.rs  security_dao.rs  settings_dao.rs
src-tauri/src/app/project/session/: migrations.rs  mod.rs
src-tauri/src/commands/: mod.rs  plugin.rs  project.rs  security.rs
src-tauri/src/interface/: mod.rs  plugin_manager.rs  project_manager.rs
src-tauri/src/local_persistance/: mod.rs  plugins.rs  projects.rs
src-tauri/src/models/: ir.rs  mod.rs  plugin.rs  project.rs
src-tauri/src/persistance/: fs_pm.rs  mod.rs
src-tauri/src/persistence/: constants.rs  mod.rs  plugin.rs  project.rs  types.rs
src-tauri/src/transport/: plugin.rs  project.rs
src/IR-example/: adapter.ts  base-components.tsx  components-mapping.tsx  opensanctions-adapter.ts
src/bindings/: Plugin.ts  Project.ts
src/components/data-model/: DetectedEntityCard.tsx  EntityCard.tsx  EntityCardFooter.tsx  EntityTableSection.tsx  FinancialRecordCard.tsx  MediaMentionCard.tsx  OrganizationCard.tsx  PersonEntityCard.tsx  PluginResultView.tsx  RiskTopicGroupCard.tsx  SocialProfileCard.tsx  TypedValueView.tsx  entityProps.ts  entityTableConfigs.ts
src/components/layout/: MainLayout.tsx
src/components/personSearch/: AdverseaEndpointSelector.tsx  PersonResultTable.tsx  PersonSearchForm.tsx  PluginSelector.tsx  ScanHistorySidebar.tsx  SearchResultsPanel.tsx  SearchTypeToggle.tsx
src/components/plugins/: AddPluginButton.tsx  PluginCard.tsx  PluginList.tsx  PluginSettingsForm.tsx
src/components/project/: EntrypointSelector.tsx  ExportPdfButton.tsx  PluginExecutionViews.tsx  PluginMetricsStrip.tsx  PluginRunCard.tsx  ProjectPluginCard.tsx  ProjectPluginSelector.tsx  ProjectQueriesSidebar.tsx  ProjectRenameDialog.tsx  ProjectScanHistorySidebar.tsx  ProjectScanPanel.tsx  (+2 more)
src/constants/: countries.ts
src/core/: favorites-context.tsx
src/hooks/: useBackendClient.tsx  usePersonSearch.ts  usePlugins.tsx  useProjectWorkspace.ts  useTheme.tsx
src/lib/: utils.ts
src/pages/: EntryPage.tsx  HistoryPage.tsx  PersonSearchPage.tsx  PrintPage.tsx  ProjectPage.tsx  ReportPage.tsx  SearchPage.tsx
src/routes/: __root.tsx  history.tsx  index.tsx  print.tsx  project.tsx  report.tsx  scans.tsx
src/types/: personSearch.ts
src/utils/: exportPdf.ts  personSearchUtils.tsx
tasks/: openrisk-scan-workflow-implementation.md
(+26 files in other folders)
