[package]
name = "openrisk"
version = "0.1.0"
description = "A Tauri App"
authors = ["Tim 14", "Illia Chaban <ic-it@mail.com>"]
edition = "2021"
rust-version = "1.94"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "openrisk_lib"
crate-type = [
  "staticlib",
  # "cdylib",
  "rlib",
]

[build-dependencies]
tauri-build = { version = "2", features = [] }
rusqlite = { version = "0.32", features = ["bundled"] }

[dependencies]
tauri = { version = "2.10", features = [] }
tauri-plugin-shell = "2.3.1"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-mcp-bridge = "0.10"
rustyscript = { version = "0.12.3", features = [
  "safe_extensions",
  "http",
  "fs_import",
] }
serde = "=1.0.219"
serde_json = "=1.0.120"
serde_bytes = "=0.11.15"
jsonschema = "0.18"
regress = "0.9"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
# For ubuntu -> aarch64-unknown-linux-gnu cross-compilation.
# If you feel the compilation is too slow, you can remove this dependency,
# and build aarch64-unknown-linux-gnu target on the matched machine (don't cross-compile)
openssl = { version = "0.10", features = ["vendored"] }
tauri-plugin-dialog = "2.6.2"
sqlx = { version = "0.8.6", default-features = false, features = [
  "runtime-tokio-rustls",
  "sqlite",
  "migrate",
  "macros",
  "derive",
] }
once_cell = "1.21"
tokio = { version = "1", features = ["sync"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
] }
specta = { version = "=2.0.0-rc.24", features = ["derive", "serde_json"] }
specta-typescript = "0.0.11"
tauri-specta = { version = "=2.0.0-rc.24", features = ["derive", "typescript"] }
libsqlite3-sys = { version = "0.30", features = [
  "bundled-sqlcipher-vendored-openssl",
] }
