[package]
name = "test_plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.54"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["json"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.20"
